--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 lib/Release filter=lfs diff=lfs merge=lfs -text
 lib/Debug filter=lfs diff=lfs merge=lfs -text
+*.lib filter=lfs diff=lfs merge=lfs -text
